# kuber

./: Cargo.toml  LICENSE  README.md
src/: app.rs  errors.rs  event.rs  input.rs  lib.rs  main.rs  menu.rs  pod.rs  ui.rs
src/app/: logs_keeper.rs
src/input/: event_loop.rs
src/ui/: footer.rs  header.rs  input_loop.rs  key_mapper.rs  logs.rs  main_body.rs
